--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,107 +3,230 @@
 <head>
     <meta charset="utf-8" />
     <meta name="author" content="Script Tutorials" />
-    <title>WillGive</title>
+    <title>AMI_Paces</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!-- attach CSS styles -->
     <link href="/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/assets/css/style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/assets/css/simple-sidebar.css" >
     <%activeMenu = "Home"%>
+    <style type="text/css">
+        #content {
+            width: 1280px;
+            margin: 0 auto;
+            text-align: center;
+        }
+        table {
+            margin: 0 auto;
+        }
+        table:hover {
+            cursor: url('images/chuizi.jpg'),auto;//此处图片路径要依据自己的路径来修改
+        }
+        td {
+            width: 125px;
+            height: 125px;
+            background-color: #000000;
+        }
+    </style>
+    <script>
+        var td = new Array(),      //保存每个格子的地鼠
+            playing = false,       //游戏是否开始
+            score = 0,             //分数
+            beat = 0,              //鼠标点击次数
+            success = 0,           //命中率
+            knock = 0,             //鼠标点中老鼠图片次数
+            countDown = 30,        //倒计时
+            interId = null,        //指定setInterval()的变量
+            timeId = null;         //指定setTimeout()的变量
 
+        //游戏结束
+        function GameOver(){
+            timeStop();
+            playing = false;
+            clearMouse();
+            alert("游戏结束！\n你获得的分数为："+score+"\n命中率为："+success);
+            success = 0;
+            score = 0;
+            knock = 0;
+            beat = 0;
+            countDown = 30;
+        }
+
+        //显示当前倒计时所剩时间
+        function timeShow(){
+            document.form1.remtime.value = countDown;
+            if(countDown == 0){
+                GameOver();
+                return;
+            }else{
+                countDown = countDown-1;
+                timeId = setTimeout("timeShow()",1000);
+            }
+        }
+
+        //主动停止所有计时
+        function timeStop(){
+            clearInterval(interId);//clearInterval()方法返回setInterval()方法的id
+            clearTimeout(timeId);//clearTime()方法返回setTimeout()的id
+        }
+
+        //随机循环显示老鼠图片
+        function show(){
+            if(playing)
+            {
+                var current = Math.floor(Math.random()*25);
+                //这里的路径也需要根据自己的实际文件路径来修改
+                document.getElementById("td["+current+"]").innerHTML = '<img src="images/dishu.png">';
+                //使用setTimeout()实现3秒后隐藏老鼠图片
+                setTimeout("document.getElementById('td["+current+"]').innerHTML=''",3000);
+            }
+        }
+
+        //清除所有老鼠图片
+        function clearMouse(){
+            for(var i=0;i<=24;i++)
+            {
+                document.getElementById("td["+i+"]").innerHTML="";
+            }
+        }
+
+        //点击事件函数，判断是否点中老鼠
+        function hit(id){
+            if(playing==false)
+            {
+                alert("请点击开始游戏");
+                return;
+            }
+            else
+            {
+                beat +=1;
+                if(document.getElementById("td["+id+"]").innerHTML!="")
+                {
+                    score += 1;
+                    knock +=1;
+                    success = knock/beat;
+                    document.form1.success.value = success;
+                    document.form1.score.value = score;
+                    document.getElementById("td["+id+"]").innerHTML="";
+                }
+                else
+                {
+                    score += -1;
+                    success = knock/beat;
+                    document.form1.success.value = success;
+                    document.form1.score.value = score;
+                }
+            }
+        }
+
+        //游戏开始
+        function GameStart(){
+            playing = true;
+            interId = setInterval("show()",1000);
+            document.form1.score.value = score;
+            document.form1.success.value = success;
+            timeShow();
+        }
+    </script>
 </head>
 
 
 
 <body>
 <!--  BODY PAGE CONTENT -->
-<!-- attach JavaScripts -->
+    <!-- attach JavaScripts -->
 
-<!-- first section - Home -->
-<div id="home" class="home">
-    <div class="text-vcenter">
-        <h1 style="font-family: Brush Script MT; font-size:80px;font-style: normal ">AMI</h1>
-
-
-    </div>
-</div>
-<!-- /first section -->
-
-<!-- second section - About -->
+    <!-- first section - Home -->
+    <div id="home" class="home">
+        <div class="text-center">
+            <h1 style="font-family: Brush Script MT; font-size:80px;font-style: normal ">AMI Paces</h1>
 
 
-<!-- /second section -->
-
-
-<!-- third section - Services -->
-<div id="services" class="pad-section">
-    <div class="container">
-
-        <div class="row text-center" style="padding-right: 50px">
-            <div class="col-sm-3 col-xs-6 info" style="border:2px solid gray;border-radius:10px;margin:11px ;height:300px;padding-top:20px ">
-                <i class="glyphicon glyphicon-cloud icon"> </i>
-                <h4>Service web</h4>
-                <p>You can donate through our website</p>
-            </div>
-            <div class="col-sm-3 col-xs-6 info" style="border:2px solid gray;border-radius:10px;margin:11px ;height:300px;padding-top:20px">
-                <i class="glyphicon glyphicon-leaf icon"> </i>
-                <h4>Service APP</h4>
-                <p>We have dedicated mobile apps on iphone and android for givers and receivers</p>
-            </div>
-            <div class="col-sm-3 col-xs-6 info" style="border:2px solid gray;border-radius:10px;margin:11px ;height:300px;padding-top:20px">
-                <i class="glyphicon glyphicon-phone-alt icon"> </i>
-                <h4>QR promotion</h4>
-                <p>We generate rich informational QR code for you to make an easy donation</p>
-            </div>
-            <div class="col-sm-3 col-xs-6 info" style="border:2px solid gray;border-radius:10px;margin:11px ;height:300px;padding-top:20px">
-                <i class="glyphicon glyphicon-bullhorn icon"> </i>
-                <h4>Easy payments</h4>
-                <p>We support all major credit cards. </p>
-            </div>
         </div>
     </div>
+
+<div id="content">
+    <video id="video" width="400" height="400" autoplay></video>
+    <canvas id="canvas" width="400" height="400" disabled="true"></canvas>
+    <button id="snap">Snap Photo</button>
+
+    <hr/>
+    <audio id="audio" controls>
+        <source src="http://www.tmbg.com/_media/_pod/TMBGPodcast21A.mp3" type="audio/mp3">
+    </audio>
+    <hr/>
+    <input type="button" value="开始游戏" onclick="GameStart()">
+    <input type="button" value="结束游戏" onclick="GameOver()">
+    <form name="form1">
+        <label>分数：</label>
+        <input type="text" name="score" size="5">
+        <label>命中率：</label>
+        <input type="text" name="success" size="10">
+        <label>倒计时：</label>
+        <input type="text" name="remtime" size="5">
+    </form>
+    <table>
+        <tr>
+            <td id="td[0]" onclick="hit(0)"></td>
+            <td id="td[1]" onclick="hit(1)"></td>
+            <td id="td[2]" onclick="hit(2)"></td>
+            <td id="td[3]" onclick="hit(3)"></td>
+            <td id="td[4]" onclick="hit(4)"></td>
+        </tr>
+        <tr>
+            <td id="td[5]" onclick="hit(5)"></td>
+            <td id="td[6]" onclick="hit(6)"></td>
+            <td id="td[7]" onclick="hit(7)"></td>
+            <td id="td[8]" onclick="hit(8)"></td>
+            <td id="td[9]" onclick="hit(9)"></td>
+        </tr>
+        <tr>
+            <td id="td[10]" onclick="hit(10)"></td>
+            <td id="td[11]" onclick="hit(11)"></td>
+            <td id="td[12]" onclick="hit(12)"></td>
+            <td id="td[13]" onclick="hit(13)"></td>
+            <td id="td[14]" onclick="hit(14)"></td>
+        </tr>
+        <tr>
+            <td id="td[15]" onclick="hit(15)"></td>
+            <td id="td[16]" onclick="hit(16)"></td>
+            <td id="td[17]" onclick="hit(17)"></td>
+            <td id="td[18]" onclick="hit(18)"></td>
+            <td id="td[19]" onclick="hit(19)"></td>
+        </tr>
+        <tr>
+            <td id="td[20]" onclick="hit(20)"></td>
+            <td id="td[21]" onclick="hit(21)"></td>
+            <td id="td[22]" onclick="hit(22)"></td>
+            <td id="td[23]" onclick="hit(23)"></td>
+            <td id="td[24]" onclick="hit(24)"></td>
+        </tr>
+    </table>
 </div>
-<!-- /third section -->
-
-
-<!-- fourth section - Information -->
-
-<div id="information" class="pad-section" style="height:250px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="panel panel-default" style="background-color: #f5f5f5; height:280px;">
-                    <div class="panel-heading">
-                        <h2 class="panel-title">WHY US?</h2>
-                    </div>
-                    <div class="panel-body lead" style="padding-top: 30px" >
-                        <p style="color:#000000">Charities</p>
-                        <p style="font-size: 14px;">It is free to use our services and get access to our app users.</P>
-                        <p style="color:#000000">Donators</p>
-                        <p style="font-size: 14px;"> We verifiy every registered charity and make sure that they're not only eligible but also efficient. 100% of your donated money (except fees charged by credit card companies) directly go to the charities of your choice.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6" >
-                <div class="panel panel-default" style="background-color: #f5f5f5; height:280px;">
-                    <div class="panel-heading">
-                        <h2 class="panel-title">How to start?</h2>
-                    </div>
-                    <div class="panel-body lead" style="padding-top: 30px">
-                        <p style="color:#000000">Charities</p>
-                        <p style="font-size: 14px;"> Register online or call our support line 1-800-296-GIVE</p>
-                        <p style="color:#000000">Donators</p>
-                        <p style="font-size: 14px;">Register online and download the app.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- /fourth section -->
-
+</body>
+</html>
 <!-- /footer -->
+<script>
+    var video = document.getElementById('video');
 
+    // Get access to the camera!
+    if(navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
+        // Not adding `{ audio: true }` since we only want video now
+        navigator.mediaDevices.getUserMedia({ video: true }).then(function(stream) {
+            video.src = window.URL.createObjectURL(stream);
+            video.play();
+        });
+    }
+
+    // Elements for taking the snapshot
+    var canvas = document.getElementById('canvas');
+    var context = canvas.getContext('2d');
+    var video = document.getElementById('video');
+
+    // Trigger photo take
+    document.getElementById("snap").addEventListener("click", function() {
+        document.getElementById("snap").setAttribute("disabled", "false");
+        context.drawImage(video, 0, 0, 300, 300);
+    });
+</script>
 <script src="/jquery/dist/jquery.js"></script>
 <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
 
