check mic exists or not

--- a/views/adjustVolume.ejs
+++ b/views/adjustVolume.ejs
@@ -15,7 +15,7 @@
         <source src="/assets/Audio/items/2000.1.mp3" type="audio/mp3">
     </audio>
     <div class="bottom-center">
-        <button type="button" id="next" class="btn btn-primary text-center" onclick="window.location.href='/interview'">Next</button>
+        <button type="button" id="next" class="btn btn-primary text-center" onclick="window.location.href='/testMic'">Next</button>
     </div>
 </body>
 </html>
