--- a/views/partials/timer.ejs
+++ b/views/partials/timer.ejs
@@ -3,7 +3,6 @@
         display: block;
         margin: 50px auto;
     }
-
     #loader
     { fill: #0088cc }
 
@@ -11,29 +10,32 @@
     { fill: #00517a }
 </style>
 
-<svg id="timer" timeout="10" r="50" width="100" height="100" viewbox="0 0 100 100">
+<svg id="timer" r="50" width="50" height="50" viewbox="0 0 100 100">
     <path id="border" transform="translate(50, 50)"/>
     <path id="loader" transform="translate(50, 50) scale(.84)"/>
 </svg>
 
 <script>
-    var timerId = null;
-    var timer = document.getElementById('timer')
-    var loader = document.getElementById('loader')
-    var border = document.getElementById('border')
-    var radius = timer.getAttribute("r")
-    var π = Math.PI
-    function startTimer(timeout) {
 
+    function startTimer(timeout, radius, onEndFunction) {
+        var timerId = null;
+        var timer = document.getElementById('timer')
+        var loader = document.getElementById('loader')
+        var border = document.getElementById('border')
+        var π = Math.PI
          var α = 0
             , t = timeout / 360 * 1000; //draw 1 degree every t milli-seconds
 
         (function draw() {
             α++;
-            if (α >= 360) {
-                $('#next').click(); // timeout, auto click next button
+            if (α > 360) {
+                if(timerId!=null) {
+                    clearTimeout(timerId);
+                }
+                onEndFunction();
+                return;
             }
-            α %= 360;
+            //α %= 360;
             var r = ( α * π / 180 )
                 , x = Math.sin(r) * radius
                 , y = Math.cos(r) * -radius
@@ -51,10 +53,5 @@
 
             timerId = setTimeout(draw, t); // Redraw
         })();
-    }
-    function stopTimer() {
-        if(timerId!=null) {
-            clearTimeout(timerId);
-        }
     }
 </script>
