--- a/views/adjustVolume.ejs
+++ b/views/adjustVolume.ejs
@@ -9,13 +9,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!-- attach CSS styles -->
     <link href="/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/jquery/dist/jquery.js"></script>
+    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
-<body>
-    <audio loop autoplay>
-        <source src="/assets/Audio/items/2000.1.mp3" type="audio/mp3">
-    </audio>
-    <div class="bottom-center">
-        <button type="button" id="next" class="btn btn-primary text-center" onclick="window.location.href='/testMic'">Next</button>
-    </div>
+<body style="width:50%; height:100%; margin-left: 25%">
+    <audio src="/assets/Audio/Items/2000.1.mp3" autoplay loop></audio>
+    <div style="background-image: url(/assets/Images/background.png); margin-right:auto; margin-left:auto; width:800px;height: 960px">
+        <div style="font-size: 100px; color: snow; vertical-align: middle; text-align: center; padding-top:50%;" >
+            Hear This ?
+        </div>
+        <button type="button" id="next"  style="text-align:center; vertical-align: center; width:200px;position: absolute;bottom: 0;left: 50%" class="bg-primary btn-lg" onclick="window.location.href='/testMic'">Next</button>
+    <div>
 </body>
 </html>
