--- a/views/partials/audioPlayer.ejs
+++ b/views/partials/audioPlayer.ejs
@@ -1,30 +1,21 @@
-<div id="audioContent" class="text-center">
-    <audio id="audio" autoplay>
-    </audio>
-</div>
 <script>
-    function startAudio(source) {
-        var audio = document.getElementById('audio');
 
-        // Get access to the camera!
-        if(navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
-            // Not adding `{ audio: true }` since we only want video now
-            navigator.mediaDevices.getUserMedia({ audio: true}).then(function(stream) {
-                audio.src = source;
-                audio.play();
-            }, function(error){
-                alert("Please make sure your camera and micphone are correctly set up.");
-            });
-        } else {
-            alert("Please make sure your browser support camera and micphone.");
-        }
+    window.index = 0;
+    function startAudioQuestion(question) {
+        var num = questionList.length;
 
-        var audio = document.getElementById('audio');
+        startAudio(question);
+
+
+    }
+    function startAudio(question) {
+        var audio = new Audio(question.source);
+        audio.play();
+        audio.onend(startRecord(question));
     }
 
-    function addAudioOnEndFunction(func) {
-        var audio = document.getElementById('audio');
-        audio.onended = func;
+    function startRecord(question) {
+
     }
 
 </script>
