--- a/views/recorder.ejs
+++ b/views/recorder.ejs
@@ -9,60 +9,10 @@
     <script src="js/recorderjs/audiodisplay.js"></script>
     <script src="js/recorderjs/recorder.js"></script>
     <script src="js/recorderjs/audioMain.js"></script>
-    <style>
-        html { overflow: hidden; }
-        body {
-            font: 14pt Arial, sans-serif;
-            background: "assets/images/background.png";
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-            width: 80%;
-            margin: 50 50;
-        }
-        canvas {
-            display: inline-block;
-            background: #202020;
-            width: 70%;
-            height: 35%;
-            box-shadow: 0px 0px 10px blue;
-        }
-        #controls {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: space-around;
-            height: 20%;
-            width: 70%;
-        }
-        #record { height: 15vh; }
-        #record.recording {
-            background: red;
-            background: -webkit-radial-gradient(center, ellipse cover, #ff0000 0%,lightgrey 75%,lightgrey 100%,#7db9e8 100%);
-            background: -moz-radial-gradient(center, ellipse cover, #ff0000 0%,lightgrey 75%,lightgrey 100%,#7db9e8 100%);
-            background: radial-gradient(center, ellipse cover, #ff0000 0%,lightgrey 75%,lightgrey 100%,#7db9e8 100%);
-        }
-        #save, #save img { height: 10vh; }
-        #save { opacity: 0.25;}
-        #save[download] { opacity: 1;}
-        #viz {
-            height: 70%;
-            width: 70%;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            align-items: center;
-        }
-        @media (orientation: landscape) {
-            body { flex-direction: row;}
-            #controls { flex-direction: column; height: 100%; width: 10%;}
-            #viz { height: 100%; width: 90%;}
-        }
-
-    </style>
+    <link rel="stylesheet" href="/css/audioCss.css">
 </head>
 <body background="assets/images/background.png">
-<div id="viz">
+<div id="viz" >
     <canvas id="analyser" width="1024" height="500"></canvas>
     <canvas id="wavedisplay" width="1024" height="500"></canvas>
 </div>
