--- a/views/partials/timer.ejs
+++ b/views/partials/timer.ejs
@@ -1,17 +1,15 @@
 <style type="text/css">
-    svg {
-        display: block;
-        margin: 50px auto;
-    }
 
     #loader
-    { fill: #0088cc }
+    { fill: #cccccc }
 
     #border
-    { fill: #00517a }
+    { border-color: #ffffff ;
+
+    }
 </style>
 
-<svg id="timer" timeout="10" r="50" width="100" height="100" viewbox="0 0 100 100">
+<svg id="timer" timeout="10" r="50" width="50" height="50" viewbox="0 0 100 100">
     <path id="border" transform="translate(50, 50)"/>
     <path id="loader" transform="translate(50, 50) scale(.84)"/>
 </svg>
