--- a/views/recorder.ejs
+++ b/views/recorder.ejs
@@ -74,6 +74,10 @@ function playQuestion(stream) {
         }
         video.play();
 
+    } else if(question.type=="image") {
+
+    } else if(question.type=="words") {
+
     }
 }
 
