--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AMI Paces</title>
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/assets/css/social-buttons.css">
     <style>
         .my-error-class{
             color:#FF0000 /*red*/
         }
     </style>
 </head>
-<body style="" background="assets/">
+<body style="" background="assets/images/icon_large.png">
 
 <div style="padding-top: 5%; height:auto; min-height: 90%;  margin: 0 auto -50px">
     <div class="container" >
@@ -47,20 +48,13 @@
             </form>
         </div>
     </div>
-    <div class="container">
-        <div class="text-center">
-            Don't have an account? <a href="/login/signup">Sign Up</a>
-        </div>
-    </div>
+
     <h3 class="form-signin-heading text-center " style="font-family : Nevis">Be in a QUIET place</h3>
     <hr/>
 </div>
 <script src="/jquery/dist/jquery.min.js"></script>
 <script src="/jquery-validation/dist/jquery.validate.js"></script>
-<script src="/js/messageReporter.js"></script>
 <script>
-    var reporter = new MessageReporter("signInReporter");
-    reporter.clear();
     //@notice: name attribute in form, not id attributes
     var formValidateParams = {
         errorClass: "my-error-class",
