--- a/views/testMicVolumeAndNoise.ejs
+++ b/views/testMicVolumeAndNoise.ejs
@@ -62,7 +62,7 @@
     </style>
 </head>
 <body>
-<div id="hiddenVoice">
+<div class="container">
     <div id="errorReporter" style="padding-bottom: 2%"></div>
     <% include partials/timer.ejs%>
     <div id="viz">
