--- a/views/partials/timer.ejs
+++ b/views/partials/timer.ejs
@@ -25,10 +25,10 @@
 
     function startTimer(timeout, radius, onEndFunction) {
         var timerId = null;
-        var timer = document.getElementById('timer')
-        var loader = document.getElementById('loader')
-        var border = document.getElementById('border')
-        var π = Math.PI
+        var timer = document.getElementById('timer');
+        var loader = document.getElementById('loader');
+        var border = document.getElementById('border');
+        var π = Math.PI;
          var α = 0
             , t = timeout/ 2 / 360 * 1000; //draw 1 degree every t milli-seconds
 
