--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -21,26 +21,37 @@
         </div>
 
         <div id="spinner" class="col-lg-1 " >
-          <span class="vcenter">  <% include partials/timer.ejs %></span>
+          <span class="vcenter">  </span>
         </div>
     </div>
-    <div class="row">
+
+    <div  id = "content" class="row">
+
         <div class="col-sm-4">
             ...........
-    </div>
-        <div class="col-sm-4">
-            ...
         </div>
         <div class="col-sm-4">
             ...
         </div>
+        <div class="col-sm-4">
+            ...
+        </div>
+
     </div>
+
+    <footer id="footer" class="row panel-footer">
+        <div id="padding-left" class="col-lg-2"></div>
+        <div id="next_button" class="col-lg-8">
+           <div id="next_button_block" > Next </div>
+        </div>
+        <div id="padding-right" class="col-lg-2"></div>
+
+    </footer>
 </div>
+
+
 <script>
     var video = document.querySelector('video');
-    //var canvas = document.querySelector('canvas');
-    //var ctx = canvas.getContext('2d');
-    //var image = document.querySelector('img');
     navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
 
     window.URL = window.URL || window.webkitURL;
@@ -62,8 +73,17 @@
 </script>
 
 <script>
-    startTimer(10);
+   // startTimer(10);
 </script>
+<script>
+    var slide_up = function(){
+        $('#footer').animate({
+            height: 'toggle'
+        }, 300, function() {
+        });
+    }
+    setTimeout(slide_up, 3000);
 
+</script>
 </body>
 </html>
